--- a/Falabella3/Cube_01.html
+++ b/Falabella3/Cube_01.html
@@ -857,7 +857,7 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i4.i414.text.html:text/html-->
 <div id="i414">¡ES HORA DE VIAJAR!</div>
 <!--#/#--><!--#i4.i458.text.html:text/html-->
-<div id="i458">¡Queremos que disfrutes, conozcas y que realices el viaje que siempre has querido!</div>
+<div id="i458">¡Queremos que disfrutes, conozcas y que realices el viaje que siempre haz querido!</div>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
 <div id="i91"></div>
 <!--#/#-->
@@ -867,7 +867,7 @@ url('fonts/') format('svg');
     <!--#i5.i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i5.i432.text.html:text/html-->
-<div id="i432">¡Queremos que disfrutes, conozcas y que realices el viaje que siempre has querido!</div>
+<div id="i432">¡Queremos que disfrutes, conozcas y que realices el viaje que siempre haz querido!</div>
 <!--#/#--><!--#i5.i428.image.html:image/html-->
 <img id="i428" src="https://i.imgur.com/M6QtrYS.png"/>
 <!--#/#--><!--#i5.i58.image.html:image/html-->
@@ -885,7 +885,7 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i6.i466.image.html:image/html-->
 <img id="i466" src="https://i.imgur.com/CGzIxHl.png"/>
 <!--#/#--><!--#i6.i60.image.html:image/html-->
-<img id="i60" src="https://i.imgur.com/bBsnp8P.jpg"/>
+<img id="i60" src="https://i.imgur.com/rllBjip.jpg"/>
 <!--#/#--><!--#i6.i406.image.html:image/html-->
 <img id="i406" src="https://i.imgur.com/Dcokx8V.png"/>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
@@ -996,19 +996,6 @@ if ('click' === 'click') {
 bmShow('i466');
 /*#/#*//*#i6.i60.image.js:image/base/js*/
 
-/*#/#*//*#i60.i454.actions.js:actions/base/js.1*/
-/* Name: On Click; */
-var el = document.getElementById('i60');
-
-el.addEventListener('click', function(e){
-    /*#i454.i455.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.google.com/maps/place/Unicentro+Bogot%C3%A1/@4.7042241,-74.0407076,16z/data=!4m5!3m4!1s0x8e3f9ab26ea0240f:0x96607cc537204acd!8m2!3d4.7022085!4d-74.0419897'), dhtml.getVar('landingPageTarget', '_blank'));
-/*#/#*/
-});
-
-if ('click' === 'click') {
-    el.style.cursor = 'pointer';
-}
 /*#/#*//*#i6.i406.image.js:image/base/js*/
 
 /*#/#*//*#i406.i407.positioning.js:positioning/base/js.2*/
@@ -1019,7 +1006,7 @@ var el = document.getElementById('i99');
 
 el.addEventListener('click', function(e){
     /*#i336.i337.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.google.com/maps/place/Unicentro+Bogot%C3%A1/@4.7042241,-74.0407076,16z/data=!4m5!3m4!1s0x8e3f9ab26ea0240f:0x96607cc537204acd!8m2!3d4.7022085!4d-74.0419897'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://goo.gl/maps/A8QHtrjSUhq4oGfm9'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
