--- a/Falabella3/Cube_02.html
+++ b/Falabella3/Cube_02.html
@@ -911,7 +911,7 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i4.i414.text.html:text/html-->
 <div id="i414">¡ES HORA DE VIAJAR!</div>
 <!--#/#--><!--#i4.i458.text.html:text/html-->
-<div id="i458">¡Queremos que disfrutes, conozcas y que realices el viaje que siempre has querido!</div>
+<div id="i458">¡Queremos que disfrutes, conozcas y que realices el viaje que siempre haz querido!</div>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
 <div id="i91"></div>
 <!--#/#--><!--#i4.i190.image.html:image/html-->
@@ -927,7 +927,7 @@ url('fonts/') format('svg');
     <!--#i5.i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i5.i432.text.html:text/html-->
-<div id="i432">¡Queremos que disfrutes, conozcas y que realices el viaje que siempre has querido!</div>
+<div id="i432">¡Queremos que disfrutes, conozcas y que realices el viaje que siempre haz querido!</div>
 <!--#/#--><!--#i5.i428.image.html:image/html-->
 <img id="i428" src="https://i.imgur.com/M6QtrYS.png"/>
 <!--#/#--><!--#i5.i58.image.html:image/html-->
@@ -949,7 +949,7 @@ url('fonts/') format('svg');
     <!--#i6.i40.shape.html:shape/html-->
 <div id="i40"></div>
 <!--#/#--><!--#i6.i60.image.html:image/html-->
-<img id="i60" src="https://i.imgur.com/bBsnp8P.jpg"/>
+<img id="i60" src="https://i.imgur.com/rllBjip.jpg"/>
 <!--#/#--><!--#i6.i466.image.html:image/html-->
 <img id="i466" src="https://i.imgur.com/skFirJ1.png"/>
 <!--#/#--><!--#i6.i406.image.html:image/html-->
@@ -1160,15 +1160,6 @@ if ('click' === 'click') {
   
 /*#/#*//*#i6.i60.image.js:image/base/js*/
 
-/*#/#*//*#i60.i454.actions.js:actions/base/js.1*/
-/* Name: On Click; */
-var el = document.getElementById('i60');
-
-
-
-if ('click' === 'click') {
-    el.style.cursor = 'pointer';
-}
 /*#/#*//*#i6.i466.image.js:image/base/js*/
 
 /*#/#*//*#i466.i467.positioning.js:positioning/base/js.2*/
@@ -1234,7 +1225,7 @@ var el = document.getElementById('i99');
 
 el.addEventListener('click', function(e){
     /*#i336.i337.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://goo.gl/maps/1jrypXTxtcDmPNJw6'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://goo.gl/maps/A8QHtrjSUhq4oGfm9'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
