--- a/Falabella3/Venetian320x480_01.html
+++ b/Falabella3/Venetian320x480_01.html
@@ -2133,6 +2133,15 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
         transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
 }
+/*#/#*//*#i44.image.css:image/base/css*/
+#i44 { opacity: 1; }
+/*#/#*//*#i44.i45.positioning.css:positioning/base/css.2*/
+#i44 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 148px; height: 89px;
+        -ms-transform: translate(0, 0) translate(86px, 409px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(86px, 409px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(86px, 409px) rotate(0deg);
+        transform: translate(0, 0) translate(86px, 409px) rotate(0deg);
+}
 /*#/#*//*#i7.text.css:text/base/css*/
 #i7 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 24px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i7.i8.positioning.css:positioning/base/css.2*/
@@ -2171,6 +2180,13 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 }
 /*#/#*//*#i42.image.css:image/base/css*/
 #i42 { opacity: 1; }
+/*#/#*//*#i42.i43.positioning.css:positioning/base/css.2*/
+#i42 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 320px; height: 96px;
+        -ms-transform: translate(0, 0) translate(0px, 384px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 384px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 384px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 384px) rotate(0deg);
+}
 /*#/#*//*#i16.i17.positioning.css:positioning/base/css.2*/
 #i16 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 58px; height: 40px;
         -ms-transform: translate(0, 0) translate(251px, 335px) rotate(0deg);
@@ -2236,13 +2252,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 .visibility-hidden, .visibility-hidden * {
     visibility: hidden !important;
 }
-/*#/#*//*#i42.i43.positioning.css:positioning/base/css.2*/
-#i42 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 320px; height: 96px;
-        -ms-transform: translate(0, 0) translate(0px, 384px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, 384px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, 384px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, 384px) rotate(0deg);
-}
 /*#/#*//*#i16.image.css:image/base/css*/
 #i16 { opacity: 1; }
 /*#/#*//*#i68.image.css:image/base/css*/
@@ -2274,55 +2283,30 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(0px, 384px) rotate(0deg);
         transform: translate(0, 0) translate(0px, 384px) rotate(0deg);
 }
-/*#/#*//*#i48.image.css:image/base/css*/
-#i48 { opacity: 1; }
-/*#/#*//*#i48.i49.positioning.css:positioning/base/css.2*/
-#i48 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 25px; height: 26px;
-        -ms-transform: translate(0, 0) translate(6px, 350px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(6px, 350px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(6px, 350px) rotate(0deg);
-        transform: translate(0, 0) translate(6px, 350px) rotate(0deg);
-}
-/*#/#*//*#i50.image.css:image/base/css*/
-#i50 { opacity: 1; }
-/*#/#*//*#i50.i51.positioning.css:positioning/base/css.2*/
-#i50 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 25px; height: 25px;
-        -ms-transform: translate(0, 0) translate(35px, 350px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(35px, 350px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(35px, 350px) rotate(0deg);
-        transform: translate(0, 0) translate(35px, 350px) rotate(0deg);
-}
-/*#/#*//*#i52.image.css:image/base/css*/
-#i52 { opacity: 1; }
-/*#/#*//*#i52.i53.positioning.css:positioning/base/css.2*/
-#i52 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 25px; height: 26px;
-        -ms-transform: translate(0, 0) translate(65px, 350px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(65px, 350px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(65px, 350px) rotate(0deg);
-        transform: translate(0, 0) translate(65px, 350px) rotate(0deg);
-}
 /*#/#*/
 </style>
 <!--#/#--></head>
 <body>
 <!--#html:common/html--><!--#i1.core.html:core/html--><!--#/#--><!--#i30.shape.html:shape/html-->
 <div id="i30"></div>
+<!--#/#--><!--#i44.image.html:image/html-->
+<img id="i44" src="https://i.imgur.com/CGzIxHl.png"/>
 <!--#/#--><!--#i7.text.html:text/html-->
 <div id="i7">¡ES HORA DE VIAJAR!</div>
 <!--#/#--><!--#i12.text.html:text/html-->
-<div id="i12">¡Queremos que disfrutes, conozcas y que realices el viaje que siempre has querido!</div>
+<div id="i12">¡Queremos que disfrutes, conozcas y que realices el viaje que siempre haz querido!</div>
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i4.slice-image.html:slice-image/html-->
-<dataimg id="i4" src="https://i.imgur.com/ociDmIM.jpg"></dataimg>
+<dataimg id="i4" src="https://i.imgur.com/6Tz4Ctn.jpg"></dataimg>
 <!--#/#--><!--#i2.i5.slice-image.html:slice-image/html-->
-<dataimg id="i5" src="https://i.imgur.com/Qyq6H53.jpg"></dataimg>
+<dataimg id="i5" src="https://i.imgur.com/HOVec8k.jpg"></dataimg>
 <!--#/#--><!--#i2.i6.slice-image.html:slice-image/html-->
-<dataimg id="i6" src="https://i.imgur.com/5lxBWEq.jpg"></dataimg>
+<dataimg id="i6" src="https://i.imgur.com/WperAXg.jpg"></dataimg>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i42.image.html:image/html-->
-<img id="i42" src="https://i.imgur.com/LzWZPDl.jpg"/>
+<img id="i42" src="https://i.imgur.com/4hClIBz.jpg"/>
 <!--#/#--><!--#i16.image.html:image/html-->
 <img id="i16" src="https://i.imgur.com/M6QtrYS.png"/>
 <!--#/#--><!--#i68.image.html:image/html-->
@@ -2331,16 +2315,14 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <div id="i54"></div>
 <!--#/#--><!--#i58.shape.html:shape/html-->
 <div id="i58"></div>
-<!--#/#--><!--#i48.image.html:image/html-->
-<img id="i48" src="https://i.imgur.com/qoOjY4L.png"/>
-<!--#/#--><!--#i50.image.html:image/html-->
-<img id="i50" src="https://i.imgur.com/RM74AKi.png"/>
-<!--#/#--><!--#i52.image.html:image/html-->
-<img id="i52" src="https://i.imgur.com/3WrUEnv.png"/>
 <!--#/#--><!--#/#--><!--#js:common/js-->
 <script>
 /*#i30.i31.positioning.js:positioning/base/js.2*/
 bmShow('i30');
+/*#/#*//*#i44.image.js:image/base/js*/
+
+/*#/#*//*#i44.i45.positioning.js:positioning/base/js.2*/
+bmShow('i44');
 /*#/#*//*#i7.i8.positioning.js:positioning/base/js.2*/
 bmShow('i7');
 /*#/#*//*#i12.i13.positioning.js:positioning/base/js.2*/
@@ -2393,15 +2375,6 @@ document.addEventListener('DOMContentLoaded', function() {
 
 /*#/#*//*#i42.i43.positioning.js:positioning/base/js.2*/
 bmShow('i42');
-/*#/#*//*#i42.i46.actions.js:actions/base/js.1*/
-/* Name: On Click; */
-var el = document.getElementById('i42');
-
-
-
-if ('click' === 'click') {
-    el.style.cursor = 'pointer';
-}
 /*#/#*//*#i16.image.js:image/base/js*/
 
 /*#/#*//*#i16.i17.positioning.js:positioning/base/js.2*/
@@ -2440,57 +2413,6 @@ el.addEventListener('click', function(e){
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
-/*#/#*//*#i48.image.js:image/base/js*/
-
-/*#/#*//*#i48.i49.positioning.js:positioning/base/js.2*/
-bmShow('i48');
-/*#/#*//*#i48.i62.actions.js:actions/base/js.1*/
-/* Name: On Click; */
-var el = document.getElementById('i48');
-
-el.addEventListener('click', function(e){
-    /*#i62.i63.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://www.facebook.com/sharer/sharer.php?u=https://www.viajesfalabella.com.co/sucursales/?utm_source=onnative&utm_medium=paid&utm_campaign=sucursales_onnative&utm_content=landing_home_sucursales_1906'), dhtml.getVar('landingPageTarget', '_blank'));
-/*#/#*/
-});
-
-if ('click' === 'click') {
-    el.style.cursor = 'pointer';
-}
-/*#/#*//*#i50.image.js:image/base/js*/
-
-/*#/#*//*#i50.i51.positioning.js:positioning/base/js.2*/
-bmShow('i50');
-/*#/#*//*#i50.i64.actions.js:actions/base/js.1*/
-/* Name: On Click; */
-var el = document.getElementById('i50');
-
-el.addEventListener('click', function(e){
-    /*#i64.i65.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://web.whatsapp.com/'), dhtml.getVar('landingPageTarget', '_blank'));
-/*#/#*/
-});
-
-if ('click' === 'click') {
-    el.style.cursor = 'pointer';
-}
-/*#/#*//*#i52.image.js:image/base/js*/
-
-/*#/#*//*#i52.i53.positioning.js:positioning/base/js.2*/
-bmShow('i52');
-/*#/#*//*#i52.i66.actions.js:actions/base/js.1*/
-/* Name: On Click; */
-var el = document.getElementById('i52');
-
-el.addEventListener('click', function(e){
-    /*#i66.i67.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG5')) : window.open(dhtml.getVar('clickTAG5', 'https://twitter.com/home?status=https://www.viajesfalabella.com.co/sucursales/?utm_source=onnative&utm_medium=paid&utm_campaign=sucursales_onnative&utm_content=landing_home_sucursales_1906'), dhtml.getVar('landingPageTarget', '_blank'));
-/*#/#*/
-});
-
-if ('click' === 'click') {
-    el.style.cursor = 'pointer';
-}
 /*#/#*//*#i9.visibility.js:visibility/js*/
 function bmShow(id) {
     var el = document.getElementById(id);
@@ -2508,6 +2430,11 @@ function bmHide(id) {
 name: Shape 1;
 /*#/#*//*#i30.i31.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
+/*#/#*//*#i44.image.meta:image/meta*/
+name: BOTON; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: 1;
+/*#/#*//*#i44.i45.positioning.meta:positioning/meta.2*/
+data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i7.text.meta:text/meta*/
 name: ¡ES HORA DE VIAJAR!; customName: false;
 /*#/#*//*#i7.i8.positioning.meta:positioning/meta.2*/
@@ -2520,11 +2447,11 @@ data: /*!*/{}/*!*/;
 name: Slice 1;
 customName: ;
 /*#/#*//*#i2.i4.slice-image.meta:slice-image/meta*/
-name: ociDmIM.jpg; fileId: ; sourceTypeId: externalUrl;
+name: 6Tz4Ctn.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i5.slice-image.meta:slice-image/meta*/
-name: Qyq6H53.jpg; fileId: ; sourceTypeId: externalUrl;
+name: HOVec8k.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i6.slice-image.meta:slice-image/meta*/
-name: 5lxBWEq.jpg; fileId: ; sourceTypeId: externalUrl;
+name: WperAXg.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i42.image.meta:image/meta*/
@@ -2550,19 +2477,4 @@ data: /*!*/{}/*!*/;
 name: LINK MAPA;
 /*#/#*//*#i58.i59.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
-/*#/#*//*#i48.image.meta:image/meta*/
-name: F; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: 1;
-/*#/#*//*#i48.i49.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i50.image.meta:image/meta*/
-name: W; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: 1;
-/*#/#*//*#i50.i51.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i52.image.meta:image/meta*/
-name: T; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: 1;
-/*#/#*//*#i52.i53.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*/--><!--#/#-->
