--- a/Falabella3/Venetian320x480_02.html
+++ b/Falabella3/Venetian320x480_02.html
@@ -2322,7 +2322,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#-->
 </div>
 <!--#/#--><!--#i42.image.html:image/html-->
-<img id="i42" src="https://i.imgur.com/4hClIBz.jpg"/>
+<img id="i42" src="https://i.imgur.com/sjSjOmU.jpg"/>
 <!--#/#--><!--#i16.image.html:image/html-->
 <img id="i16" src="https://i.imgur.com/M6QtrYS.png"/>
 <!--#/#--><!--#i68.image.html:image/html-->
