--- a/Falabella3/Cube_01.html
+++ b/Falabella3/Cube_01.html
@@ -885,7 +885,7 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i6.i466.image.html:image/html-->
 <img id="i466" src="https://i.imgur.com/CGzIxHl.png"/>
 <!--#/#--><!--#i6.i60.image.html:image/html-->
-<img id="i60" src="https://i.imgur.com/rllBjip.jpg"/>
+<img id="i60" src="https://i.imgur.com/qlxPGYM.jpg"/>
 <!--#/#--><!--#i6.i406.image.html:image/html-->
 <img id="i406" src="https://i.imgur.com/Dcokx8V.png"/>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
