--- a/Falabella3/Cube_02.html
+++ b/Falabella3/Cube_02.html
@@ -949,7 +949,7 @@ url('fonts/') format('svg');
     <!--#i6.i40.shape.html:shape/html-->
 <div id="i40"></div>
 <!--#/#--><!--#i6.i60.image.html:image/html-->
-<img id="i60" src="https://i.imgur.com/rllBjip.jpg"/>
+<img id="i60" src="https://i.imgur.com/qlxPGYM.jpg"/>
 <!--#/#--><!--#i6.i466.image.html:image/html-->
 <img id="i466" src="https://i.imgur.com/skFirJ1.png"/>
 <!--#/#--><!--#i6.i406.image.html:image/html-->
