--- a/BURGER KING/story-resize.html
+++ b/BURGER KING/story-resize.html
@@ -405,9 +405,9 @@
                       
          <span class="bzm_text_title  bzm_text_medium" style="display: flex; margin-top: 5px;  margin-left: 30px; text-align: center;"><label style="min-width: 80%" for="condiciones"><a style="font-size: 18px; color: #eb1b23;"><i><b>¡HECHAS A TU MANERA!</b></i></a></label></span>
          
-          <span class="bzm_text_title  bzm_text_medium" style="display:block; margin-top:0px; padding-top:20px; padding-bottom:5px;">
+          <span class="bzm_text_title  bzm_text_medium" style="display:block; margin-top:-10px; padding-top:20px; padding-bottom:5px;">
                     <img class="final"  style="display:block; margin-right:50px;margin-left:-50;" target="_blank"><a href="http://www.burgerking.com.mx/food-quality/our-burgers" style="display: block;" target="_blank">
-                        <div class="img-news" style="background-image:url(https://i.imgur.com/1gVhZWK.jpg); width: 300px;"></div> 
+                        <div class="img-news" style="background-image:url(https://i.imgur.com/Eyk5kjp.jpg); width: 281px;"></div> 
               </a>    </span>
 
 
