--- a/Falabella3/Venetian320x480_02.html
+++ b/Falabella3/Venetian320x480_02.html
@@ -2310,7 +2310,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i7.text.html:text/html-->
 <div id="i7">¡ES HORA DE VIAJAR!</div>
 <!--#/#--><!--#i12.text.html:text/html-->
-<div id="i12">¡Queremos que disfrutes, conozcas y que realices el viaje que siempre haz querido!</div>
+<div id="i12">¡Queremos que disfrutes, conozcas y que realices el viaje que siempre has querido!</div>
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i4.slice-image.html:slice-image/html-->
@@ -2322,7 +2322,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#-->
 </div>
 <!--#/#--><!--#i42.image.html:image/html-->
-<img id="i42" src="https://i.imgur.com/sjSjOmU.jpg"/>
+<img id="i42" src="https://i.imgur.com/4hClIBz.jpg"/>
 <!--#/#--><!--#i16.image.html:image/html-->
 <img id="i16" src="https://i.imgur.com/M6QtrYS.png"/>
 <!--#/#--><!--#i68.image.html:image/html-->
