--- a/Falabella3/Cube_02.html
+++ b/Falabella3/Cube_02.html
@@ -927,7 +927,7 @@ url('fonts/') format('svg');
     <!--#i5.i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i5.i432.text.html:text/html-->
-<div id="i432">¡Queremos que disfrutes, conozcas y que realices el viaje que siempre haz querido!</div>
+<div id="i432">¡Queremos que disfrutes, conozcas y que realices el viaje que siempre has querido!</div>
 <!--#/#--><!--#i5.i428.image.html:image/html-->
 <img id="i428" src="https://i.imgur.com/M6QtrYS.png"/>
 <!--#/#--><!--#i5.i58.image.html:image/html-->
@@ -949,7 +949,7 @@ url('fonts/') format('svg');
     <!--#i6.i40.shape.html:shape/html-->
 <div id="i40"></div>
 <!--#/#--><!--#i6.i60.image.html:image/html-->
-<img id="i60" src="https://i.imgur.com/qlxPGYM.jpg"/>
+<img id="i60" src="https://i.imgur.com/rllBjip.jpg"/>
 <!--#/#--><!--#i6.i466.image.html:image/html-->
 <img id="i466" src="https://i.imgur.com/skFirJ1.png"/>
 <!--#/#--><!--#i6.i406.image.html:image/html-->
