--- a/BMWseries1/Venetian320x480.html
+++ b/BMWseries1/Venetian320x480.html
@@ -2266,11 +2266,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i68.image.css:image/base/css*/
 #i68 { opacity: 1; }
 /*#/#*//*#i68.i69.positioning.css:positioning/base/css.2*/
-#i68 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 318px; height: 477px;
-        -ms-transform: translate(0, 0) translate(1px, 2px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(1px, 2px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(1px, 2px) rotate(0deg);
-        transform: translate(0, 0) translate(1px, 2px) rotate(0deg);
+#i68 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 319px; height: 479px;
+        -ms-transform: translate(0, 0) translate(1px, 1px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(1px, 1px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(1px, 1px) rotate(0deg);
+        transform: translate(0, 0) translate(1px, 1px) rotate(0deg);
 }
 /*#/#*//*#i74.image.css:image/base/css*/
 #i74 { opacity: 1; }
@@ -2447,7 +2447,7 @@ var el = document.getElementById('i76');
 
 el.addEventListener('click', function(e){
     /*#i82.i83.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=¡Mira lo que he encontrado! https://goo.gl/maps/uFKjDSp2cYqQFAuQA'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://whatsapp.com'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
