--- a/BMWseries1/Fade300x250.html
+++ b/BMWseries1/Fade300x250.html
@@ -66,15 +66,15 @@
         }
 
         .fadesmall .bg.cover-1 {
-            background-image: url(https://i.imgur.com/sd0DdJU.jpg)
+            background-image: url(https://i.imgur.com/NWVUSgq.jpg)
         }
 
         .fadesmall .bg.cover-2 {
-            background-image: url(https://i.imgur.com/EVTwbwf.jpg)
+            background-image: url(https://i.imgur.com/YD9yDL4.jpg)
         }
 
         .fadesmall .bg.cover-3 {
-            background-image: url(https://i.imgur.com/t8eP8Fl.jpg)
+            background-image: url(https://i.imgur.com/z1LWYjR.jpg)
 
         }
 
@@ -258,9 +258,9 @@
 
           .fadesmall #logo {
             
-            height:35px;
-            margin-top: 7px; 
-            margin-left:260px;
+            height:45px;
+            margin-top: 2px; 
+            margin-left:245px;
 
         }
 
@@ -270,7 +270,7 @@
             width: 140px;
             line-height: 1.3em;
             z-index: 5;
-            margin-left: 62px;
+            margin-left: 57px;
             background-color: #;
             padding: 5px;
             border-radius: 20px;
@@ -283,37 +283,37 @@
    <div class="bzm_wrapper carousel-wrapper size_300x250">
 
     <!-- Para quitar CTA se quita esta etiqueta y recordar quitar la propiedad CTA en el CSS -->
-        <div class="cta"> <a href="https://www.lifetimeplay.tv/mx/lifetime-movies" target="_blank">
-    <img src="https://i.imgur.com/4pemBrN.png" style="height: 45px;"></a></div>   
+        <div class="cta"> <a href="https://www.bmw.com.mx/content/bmw/marketMX/bmw_com_mx/es_MX/all-models/1-series/5-puertas/2017/caracteristicas.html?gclid=EAIaIQobChMI0IX1t4X24gIVEp7ACh0qqgxcEAAYASAAEgK-3PD_BwE" target="_blank">
+    <img src="https://i.imgur.com/JDnuzI9.png" style="height: 50px;"></a></div>   
 
-        <a href="https://www.lifetimeplay.tv/mx/lifetime-movies" target="_blank">
+        <a href="https://www.bmw.com.mx/content/bmw/marketMX/bmw_com_mx/es_MX/all-models/1-series/5-puertas/2017/caracteristicas.html?gclid=EAIaIQobChMI0IX1t4X24gIVEp7ACh0qqgxcEAAYASAAEgK-3PD_BwE" target="_blank">
             <div class="carousel-container">
                 <!-- ESTAS SE COLOCAN EN EL CSS -->
                 <div class="bzm_cover bg cover-1 carousel-item1 item-1"></div>
                 <div class="bzm_cover bg cover-2 carousel-item1 item-2"></div>
                 <div class="bzm_cover bg cover-3 carousel-item1 item-3"></div>
             </div>
-            <div class="bzm_text"> <span class="bzm_text_title"><b>Victoria Gotti: La Hija de la Mafia.</b><br>Estreno exclusivo, sábado 15 de junio.</br></span>
+            <div class="bzm_text"> <span class="bzm_text_title"><b>BMW Series 1</b><br>CONECTADO PARA TRIUNFAR.</br></span>
                </div>
 
                 <div class="cta" > <img src="" style="height: 45px;"></div>
 
             <!-- LOGO -->
-            <div class="logo"> <img id="logo" src="https://i.imgur.com/Q7x8xSr.png"></div>
+            <div class="logo"> <img id="logo" src="https://i.imgur.com/cv4V6t8.png"></div>
 
 
                 <!--PARA QUITAR LOS BOTONES SOLO COMENTAR Y CERRAR-->
 
                 <div id="botones-para-compartir"> 
                    
-                    <span> <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=https://www.lifetimeplay.tv/mx/lifetime-movies"  target="block">    
-                        <img alt="compartir en facebook" class="facebooki" height="22" src="https://i.imgur.com/WV1DSVZ.png" title="compartir en facebook" width="22" /></a>
+                    <span> <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=https://www.bmw.com.mx/content/bmw/marketMX/bmw_com_mx/es_MX/all-models/1-series/5-puertas/2017/caracteristicas.html?gclid=EAIaIQobChMI0IX1t4X24gIVEp7ACh0qqgxcEAAYASAAEgK-3PD_BwE"  target="block">    
+                        <img alt="compartir en facebook" class="facebooki" height="22" src="https://i.imgur.com/fclPCwn.png" title="compartir en facebook" width="22" /></a>
 
-                            <a class="shared" href="whatsapp://send?text=https://www.lifetimeplay.tv/mx/lifetime-movies" target="block">
-                            <img alt="compartir en whatsapp" class="whatsappi" height="22" src="https://i.imgur.com/n0J7vCp.png" title="compartir en whatsapp" width="22" /></a>
+                            <a class="shared" href="whatsapp://send?text=https://www.bmw.com.mx/content/bmw/marketMX/bmw_com_mx/es_MX/all-models/1-series/5-puertas/2017/caracteristicas.html?gclid=EAIaIQobChMI0IX1t4X24gIVEp7ACh0qqgxcEAAYASAAEgK-3PD_BwE" target="block">
+                            <img alt="compartir en whatsapp" class="whatsappi" height="22" src="https://i.imgur.com/EZve6V8.png" title="compartir en whatsapp" width="22" /></a>
 
-                            <a class="shared" href="https://twitter.com/home?status=https://www.lifetimeplay.tv/mx/lifetime-movies" target="block">
-                            <img alt="compartir en twitter" class="twitteri" height="22" src="https://i.imgur.com/uabhexm.png" title="compartir en twitter" width="22" /></a> </span></div>
+                            <a class="shared" href="https://twitter.com/home?status=https://www.bmw.com.mx/content/bmw/marketMX/bmw_com_mx/es_MX/all-models/1-series/5-puertas/2017/caracteristicas.html?gclid=EAIaIQobChMI0IX1t4X24gIVEp7ACh0qqgxcEAAYASAAEgK-3PD_BwE" target="block">
+                            <img alt="compartir en twitter" class="twitteri" height="22" src="https://i.imgur.com/qR4INnL.png" title="compartir en twitter" width="22" /></a> </span></div>
             </div>
         </a>
     </div>
