--- a/BMWseries1/Venetian320x480.html
+++ b/BMWseries1/Venetian320x480.html
@@ -2447,7 +2447,7 @@ var el = document.getElementById('i76');
 
 el.addEventListener('click', function(e){
     /*#i82.i83.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://whatsapp.com'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=¡Mira lo que he encontrado! https://goo.gl/maps/uFKjDSp2cYqQFAuQA'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
