--- a/BMWseries1/Fade300x250.html
+++ b/BMWseries1/Fade300x250.html
@@ -20,7 +20,8 @@
         .fadesmall .bg.cover-2,
         .fadesmall .bg.cover-3,
         .fadesmall {
-            background-size: cover
+            background-size: cover;
+            margin:0;
         }
 
         .fadesmall .btn {
