--- a/BMWseries1/Fade300x250.html
+++ b/BMWseries1/Fade300x250.html
@@ -82,7 +82,7 @@
         }
 
         .fadesmall .bg.cover-3 {
-            background-image: url(https://i.imgur.com/z1LWYjR.jpg)
+            background-image: url(https://i.imgur.com/U9awMpG.gif)
 
         }
 
