--- a/BMWseries1/Venetian320x480.html
+++ b/BMWseries1/Venetian320x480.html
@@ -2316,9 +2316,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i2.i4.slice-image.html:slice-image/html-->
 <dataimg id="i4" src="https://i.imgur.com/3FLuQP8.jpg"></dataimg>
 <!--#/#--><!--#i2.i5.slice-image.html:slice-image/html-->
-<dataimg id="i5" src="https://i.imgur.com/KwVFBkq.jpg"></dataimg>
+<dataimg id="i5" src="https://i.imgur.com/5uKzymP.gif"></dataimg>
 <!--#/#--><!--#i2.i6.slice-image.html:slice-image/html-->
 <dataimg id="i6" src="https://i.imgur.com/e5rKl9l.jpg"></dataimg>
+<!--#/#--><!--#i2.i86.slice-image.html:slice-image/html.1-->
+<dataimg id="i86" src="https://i.imgur.com/MfwW7dg.gif"></dataimg>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i42.image.html:image/html-->
@@ -2390,6 +2392,8 @@ document.addEventListener('DOMContentLoaded', function() {
 /*#/#*//*#i2.i5.slice-image.js:slice-image/base/js*/
 
 /*#/#*//*#i2.i6.slice-image.js:slice-image/base/js*/
+
+/*#/#*//*#i2.i86.slice-image.js:slice-image/base/js.1*/
 
 /*#/#*//*#i42.image.js:image/base/js*/
 
@@ -2507,9 +2511,12 @@ customName: ;
 /*#/#*//*#i2.i4.slice-image.meta:slice-image/meta*/
 name: 3FLuQP8.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i5.slice-image.meta:slice-image/meta*/
-name: KwVFBkq.jpg; fileId: ; sourceTypeId: externalUrl;
+name: 5uKzymP.gif; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i6.slice-image.meta:slice-image/meta*/
 name: e5rKl9l.jpg; fileId: ; sourceTypeId: externalUrl;
+/*#/#*//*#i2.i86.slice-image.meta:slice-image/meta.1*/
+name: MfwW7dg.gif; fileId: ; sourceTypeId: externalUrl;
+customName: false;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i42.image.meta:image/meta*/
