--- a/BMWseries1/ZoomExp300x600.html
+++ b/BMWseries1/ZoomExp300x600.html
@@ -163,10 +163,10 @@ a {text-decoration: none;}
 <div class="ism-slider" data-transition_type="zoom" data-play_type="loop" data-interval="3000" data-image_fx="zoompan" data-buttons="false" data-radios="false" id="my-slider" style="width: 300px; height: 450px; border-radius: none;">
   <ol>
     <li>
-      <img src="https://i.imgur.com/RLXEVPM.jpg">
+      <img src="https://i.imgur.com/UJQ1SoS.gif">
       
     <li>
-      <img src="https://i.imgur.com/Urxaiih.jpg">
+      <img src="https://i.imgur.com/RLXEVPM.jpg">
       
     <li>
       <img src="https://i.imgur.com/oZyumOw.gif">
