--- a/BMWseries1/Cube.html
+++ b/BMWseries1/Cube.html
@@ -907,7 +907,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i6.i40.shape.html:shape/html-->
 <div id="i40"></div>
 <!--#/#--><!--#i6.i200.image.html:image/html-->
-<img id="i200" src="https://i.imgur.com/NWVUSgq.jpg"/>
+<img id="i200" src="https://i.imgur.com/go3vKIs.gif"/>
 <!--#/#--><!--#i6.i248.text.html:text/html-->
 <div id="i248">Impresiona, es divertido y nunca pasa desapercibido.</div>
 <!--#/#--><!--#i6.i242.image.html:image/html-->
