--- a/BMWseries1/Venetian320x480.html
+++ b/BMWseries1/Venetian320x480.html
@@ -2316,7 +2316,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i2.i4.slice-image.html:slice-image/html-->
 <dataimg id="i4" src="https://i.imgur.com/3FLuQP8.jpg"></dataimg>
 <!--#/#--><!--#i2.i5.slice-image.html:slice-image/html-->
-<dataimg id="i5" src="https://i.imgur.com/5uKzymP.gif"></dataimg>
+<dataimg id="i5" src="https://i.imgur.com/Tj2deIV.gif"></dataimg>
 <!--#/#--><!--#i2.i6.slice-image.html:slice-image/html-->
 <dataimg id="i6" src="https://i.imgur.com/e5rKl9l.jpg"></dataimg>
 <!--#/#--><!--#i2.i86.slice-image.html:slice-image/html.1-->
@@ -2451,7 +2451,7 @@ var el = document.getElementById('i76');
 
 el.addEventListener('click', function(e){
     /*#i82.i83.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=¡Mira lo que he encontrado! https://goo.gl/maps/uFKjDSp2cYqQFAuQA'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://whatsapp.com'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2511,7 +2511,7 @@ customName: ;
 /*#/#*//*#i2.i4.slice-image.meta:slice-image/meta*/
 name: 3FLuQP8.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i5.slice-image.meta:slice-image/meta*/
-name: 5uKzymP.gif; fileId: ; sourceTypeId: externalUrl;
+name: Tj2deIV.gif; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i6.slice-image.meta:slice-image/meta*/
 name: e5rKl9l.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i86.slice-image.meta:slice-image/meta.1*/
