--- a/BMWseries1/ZoomExp300x600.html
+++ b/BMWseries1/ZoomExp300x600.html
@@ -169,7 +169,7 @@ a {text-decoration: none;}
       <img src="https://i.imgur.com/RLXEVPM.jpg">
       
     <li>
-      <img src="https://i.imgur.com/oZyumOw.gif">
+      <img src="https://i.imgur.com/NbEj1vW.gif">
       
     </li>
   </ol>
