--- a/BMWseries1/Fade300x250.html
+++ b/BMWseries1/Fade300x250.html
@@ -74,7 +74,7 @@
         }
 
         .fadesmall .bg.cover-1 {
-            background-image: url(https://i.imgur.com/NWVUSgq.jpg)
+            background-image: url(https://i.imgur.com/go3vKIs.gif)
         }
 
         .fadesmall .bg.cover-2 {
