--- a/BMWseries1/Fade300x250.html
+++ b/BMWseries1/Fade300x250.html
@@ -74,7 +74,7 @@
         }
 
         .fadesmall .bg.cover-1 {
-            background-image: url(https://i.imgur.com/go3vKIs.gif)
+            background-image: url(https://i.imgur.com/MfwW7dg.gif)
         }
 
         .fadesmall .bg.cover-2 {
@@ -82,7 +82,7 @@
         }
 
         .fadesmall .bg.cover-3 {
-            background-image: url(https://i.imgur.com/U9awMpG.gif)
+            background-image: url(https://i.imgur.com/go3vKIs.gif))
 
         }
 
