--- a/BMWseries1/Fade300x250.html
+++ b/BMWseries1/Fade300x250.html
@@ -82,7 +82,7 @@
         }
 
         .fadesmall .bg.cover-3 {
-            background-image: url(https://i.imgur.com/go3vKIs.gif))
+            background-image: url(https://i.imgur.com/go3vKIs.gif)
 
         }
 
@@ -302,7 +302,7 @@
                 <div class="bzm_cover bg cover-2 carousel-item1 item-2"></div>
                 <div class="bzm_cover bg cover-3 carousel-item1 item-3"></div>
             </div>
-            <div class="bzm_text"> <span class="bzm_text_title"><b>BMW Series 1</b><br>CONECTADO PARA TRIUNFAR.</br></span>
+            <div class="bzm_text"> <span class="bzm_text_title"><b>BMW Serie 1</b><br>CONECTADO PARA TRIUNFAR.</br></span>
                </div>
 
                 <div class="cta" > <img src="" style="height: 45px;"></div>
