--- a/BMWseries1/ZoomExp300x600.html
+++ b/BMWseries1/ZoomExp300x600.html
@@ -175,7 +175,7 @@ a {text-decoration: none;}
   </ol>
 </div>
 
- <div class="ism_text"> <span class=" ism_text_title ism_text_bold" style="font-family:Arial; color:#000000; font-size:26px;  text-decoration: none;">BMW Series 1</span><br>
+ <div class="ism_text"> <span class=" ism_text_title ism_text_bold" style="font-family:Arial; color:#000000; font-size:26px;  text-decoration: none;">BMW Serie 1</span><br>
     <span class=" ism_text " style="font-family:Arial; color:#000000; font-size:20px;  text-decoration: none;">CONECTADO PARA TRIUNFAR.</span>
 
 
